fix gsl -> bse link.
Sat Jul 27 18:22:32 2002  Tim Janik  <timj@gtk.org>

        * Makefile.am: fix gsl -> bse link.

        * configure.in: error out if guile is missing.

        * beast-gtk/Makefile.am: add missing files.

        * beast-gtk/bstpartdialog.c: nuke wrong include.

        * beast-gtk/icons/Makefile.am: fix build rules.

        * beast-gtk/images/Makefile.am: add missing files.

        * bsw/Makefile.am: add -I., fix build rules.

        * bsw/mkapi.c: fix generated includes.

        * bsw-shell/Makefile.am: add -I., add missing files.
        scm glue is now kept in bsw-scm-glue.boot.

        * docs/Makefile.am: nuke outdated files from EXTRA_DIST.

        * docs/reference/Makefile.am: fix build rules.

svn path=/trunk/; revision=493

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,8 +35,12 @@ PKG_paths.h: $(top_srcdir)/configure Makefile
 
 # always built PKG_paths.h and create gsl link
 stamp-h: PKG_paths.h gsl
+
+# create builddir gsl link
 gsl:
 	ln -s bse gsl
+# dist ship the srcdir gsl link
+EXTRA_DIST += gsl
 
 MAINTAINERCLEANFILES += PKG_paths.h gsl
 
