feature release candidate appendix.
Sat Jul 27 19:10:36 2002  Tim Janik  <timj@gtk.org>

        * configure.in (BST_RELEASE_CANDIDATE): feature release candidate
        appendix.

        * bsw-shell/Makefile.am (public_scripts): don't install test.scm.

        * bsw/Makefile.am: fix build rules for massive parallel
        builds. fix clean rules.

svn path=/trunk/; revision=495

--- a/bsw-shell/Makefile.am
+++ b/bsw-shell/Makefile.am
@@ -36,6 +36,5 @@ script_DATA = $(public_scripts)
 public_scripts = $(strip	\
 	bsw-scm-glue.boot	\
 	progressor-example.scm	\
-	test.scm		\
 )
-EXTRA_DIST += $(public_scripts)
+EXTRA_DIST += $(public_scripts) test.scm
