copy and update clue hunter code from GLE. added ::poll_refresh signal to
Fri Aug  2 18:33:47 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstcluehunter.[hc]: copy and update clue hunter code from
        GLE. added ::poll_refresh signal to update clue hunter contents.

        * beast-gtk/bstparam.c: update clue hunter code to use BstClueHunter.
        feature bsw_item_list_proxies() procedure for OBJECT properties.

svn path=/trunk/; revision=500

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -40,6 +40,7 @@ beast_headers = $(strip \
 	bstasciipixbuf.h \
 	bstcanvaslink.h \
 	bstcanvassource.h \
+	bstcluehunter.h \
 	bstcontrollers.h \
 	bstdefs.h \
 	bstdial.h \
@@ -100,6 +101,7 @@ beast_sources = $(strip \
 	bstasciipixbuf.c \
 	bstcanvaslink.c \
 	bstcanvassource.c \
+	bstcluehunter.c \
 	bstcontrollers.c \
 	bstdial.c \
 	bstdialog.c \
