don't include and ship PKG_paths.h.
Sat Aug  3 17:46:41 2002  Tim Janik  <timj@gtk.org>

        * Makefile.am (EXTRA_DIST): don't include and ship PKG_paths.h.

        * docs/reference/Makefile.am (bsw-procs.dat): don't load plugins
        from bsequery since this might be called while still uninstalled.

        * configure.in: up version to rc2.
        check whether ov_read_float() from libvorbis has 3 or 4 arguments.

        * beast-gtk/images/beast-splash.png: splash screen update from
        jimmac which says "Bedevilled Audio System".

svn path=/trunk/; revision=503

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,7 @@
 SRC_SUBDIRS = bse plugins bsw bsw-shell beast-gtk
 
 # other subdirs
-SUBDIRS = $(SRC_SUBDIRS) docs test
+SUBDIRS = . $(SRC_SUBDIRS) docs test
 
 # require automake 1.4
 AUTOMAKE_OPTIONS = 1.4
@@ -42,8 +42,8 @@ gsl:
 # dist ship the srcdir gsl link
 EXTRA_DIST += gsl
 
-MAINTAINERCLEANFILES += PKG_paths.h gsl
+CLEANFILES += PKG_paths.h
+MAINTAINERCLEANFILES += gsl
 
 EXTRA_DIST += \
-	PKG_paths.h \
 	acbeast.m4
