add mkcproc.pl to EXTRA_DIST.
Thu Aug 15 21:21:46 2002  Tim Janik  <timj@gtk.org>

        * Makefile.am: add mkcproc.pl to EXTRA_DIST.

        * bsestandardosc.c (bse_standard_osc_update_modules):
        pass on transaction.

svn path=/trunk/; revision=516

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -236,6 +236,7 @@ bse_extra_sources = $(strip \
 	mkbuiltinlist.pl \
 	mktypes.pl \
 	mkcalls.pl \
+	mkcproc.pl \
 	bseamplifier-aux.c \
 	bseconfig.h.in \
 	bsepcmmodule.c \
