add AC_DOC_REQUIREMENTS() which checks for all things neccessary to build
Fri Aug 16 02:11:00 2002  Tim Janik  <timj@gtk.org>

        * configure.in: add AC_DOC_REQUIREMENTS() which checks for
        all things neccessary to build texi docs. (currently, we
        need a patched makeinfo, but that'll hopefully change with
        the next makeinfo release).
        up release candidate to 3.

        * beast-gtk/Makefile.am: sort out beast sources. added build
        rules for tsmview.

        * beast-gtk/tsmview.c: a small noinst program to view TagSpanMarkup
        docs with GtkTextView.

        * beast-gtk/bstapp.c: added QuickStart help file popup to menu.

        * beast-gtk/bstdialog.[hc]: renamed BST_DIALOG_STATUS flag to
        BST_DIALOG_STATUS_SHELL, since this flag really indicates a
        different type of window.
        (bst_dialog_key_press_event): support Escape as a shortcut
        for delete-event (for normal windows).
        (bst_dialog_action_multi): catch addition of STOCK_CLOSE or
        STOCK_CANCEL to update BST_DIALOG_DELETE_BUTTON flag.

        * bstmain.c: moved some stuff into bstutils.c and bstapp.c to
        avoid dependancies from the rest of the sources on bstmain.c.

        * bstutils.[hc]: get rid of text widget or text display related
        stuff.

        * bsttexttools.[hc]: new files, containing code to deal with
        text view/buffer objects, text display and markup.
        beyond the functionality of text display related code from
        bstutils.[hc], this code parses TagSpanMarkup xml tags, offers
        utilities to move the cursor in text view/buffer, and offers
        text browsing mode key bindings for GtkTextView.
        also, the initial GtkTextView size requisition got fixed.

svn path=/trunk/; revision=517

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -78,6 +78,7 @@ beast_headers = $(strip \
 	bstsongshell.h \
 	bstsplash.h \
 	bststatusbar.h \
+	bsttexttools.h \
 	bsttoolbar.h \
 	bsttrackview.h \
 	bstsupershell.h \
@@ -113,7 +114,6 @@ beast_sources = $(strip \
 	bstkeytables.c \
 	bstknob.c \
 	bstlogadjustment.c \
-	bstmain.c \
 	bstmenus.c \
 	bstparam.c \
 	bstparamview.c \
@@ -138,6 +138,7 @@ beast_sources = $(strip \
 	bstsongshell.c \
 	bstsplash.c \
 	bststatusbar.c \
+	bsttexttools.c \
 	bsttoolbar.c \
 	bsttrackview.c \
 	bstsupershell.c \
@@ -229,10 +230,12 @@ $(srcdir)/bstmarshal.c: bstmarshal.list
 #
 # setup BEAST sources and their dependancies
 #
-beast_SOURCES = $(beast_sources)
-noinst_PROGRAMS = bststest
+beast_SOURCES = bstmain.c $(beast_sources)
+noinst_PROGRAMS = bststest tsmview
 bststest_SOURCES = bststest.c bstutils.c bstqsampler.c
 bststest_LDADD = $(progs_LDADD)
+tsmview_SOURCES = tsmview.c $(beast_sources)
+tsmview_LDADD = $(progs_LDADD)
 
 EXTRA_DIST += $(beast_headers) $(beast_extra_sources)
 MAINTAINERCLEANFILES += $(beast_built_sources)
