add new .texi doc files, cleanups. newly formatted and updated FAQ.
Fri Aug 16 03:17:26 2002  Tim Janik  <timj@gtk.org>

        * docs/Makefile.am: add new .texi doc files, cleanups.
        * docs/faq.texi: newly formatted and updated FAQ.
        * docs/quickstart.texi: started out on a quick start guide.
        * docs/release-notes.texi: newly formatted release notes.
        * docs/teximacros.texi: texi base macros.

        * docs/generated/Makefile.am: generate docs from the .texi
        sources with makeinfo and xsltproc now.

        * docs/generated/texinfo.dtd: small DTD that just transforms
        frequently used texi-sepcial entities into xml tags.

        * docs/generated/html.xsl: XSL stylesheet from alper to produce
        html from makeinfo --xml output.

        * docs/generated/markup.xsl: bad hackup to generate TagSpanMarkup
        output from makeinfo --xml. alper, this could need some loving ;)

        * docs/reference/Makefile.am: moved tags2doc.pl into this dir,
        since the reference docs aren't yet ported to texi/xsl.

svn path=/trunk/; revision=518

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,16 +1,17 @@
 SUBDIRS = generated reference
 
-public_docs = $(strip \
+texi_docs = $(strip		\
+	faq.texi		\
+	quickstart.texi		\
+	release-notes.texi	\
+	teximacros.texi		\
 )
-private_docs = $(strip \
-	bse-categories.txt \
-	interpolation.txt \
-)
-build_tools = $(strip \
-	tags2doc.pl \
+private_docs = $(strip		\
+	bse-categories.txt	\
+	interpolation.txt	\
 )
 
 docsdir = ${beastdocsdir}
-docs_DATA = ${public_docs}
+docs_DATA = # ${public_docs}
 
-EXTRA_DIST = ${public_docs} ${private_docs} $(build_tools)
+EXTRA_DIST = ${texi_docs} ${private_docs}
